--- a/index.html
+++ b/index.html
@@ -71,13 +71,15 @@
                     </li>
                     <li><a data-scroll="scrollTo" href="#testimonials">Testimonials</a>
                     </li>
-                    <li><a data-scroll="scrollTo" href="#">Pricing</a>
+                    <li><a data-scroll="scrollTo" href="./Price.html">Pricing</a>
                     </li>
-                    <li><a data-scroll="scrollTo" href="#footer">Faq</a>
+                    <li><a data-scroll="scrollTo" href="#">Career</a>
                     </li>
-                    <li><a data-scroll="scrollTo" href="#footer">Contact</a>
+                    <li><a data-scroll="scrollTo" href="./Faq.html">Faq</a>
                     </li>
-                    <li><a data-scroll="scrollTo" href="#">Sign In</a>
+                    <li><a data-scroll="scrollTo" href="./contact.html">Contact</a>
+                    </li>
+                    <li><a data-scroll="scrollTo" href="#">Register</a>
                     </li>
                 </ul>
             </div>
@@ -413,62 +415,7 @@
 </section>
 <!-- #testimonials5 end -->
 
-<section class="ko-faq-section">
-    <div class="ko-container">
-      <h2>Frequently asked questions</h2>
-      <p>Question you might ask about our services.</p>
-      <div class="ko-faq-accordion">
-        <div class="ko-accordion-item">
-          <div class="ko-accordion-item-header">What does LOREM mean?</div>
-          <div class="ko-accordion-item-body">
-            <p class="ko-accordion-item-body-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          </div>
-        </div>
-        <div class="ko-accordion-item">
-          <div class="ko-accordion-item-header">Where can I subscribe to your newsletter?</div>
-          <div class="ko-accordion-item-body">
-            <p class="ko-accordion-item-body-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          </div>
-        </div>
-        <div class="ko-accordion-item">
-          <div class="ko-accordion-item-header">Where can I edit my billing and shipping address?</div>
-          <div class="ko-accordion-item-body">
-            <p class="ko-accordion-item-body-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          </div>
-        </div>
-        <div class="ko-accordion-item">
-          <div class="ko-accordion-item-header">Can I order a free sample copy of a magazine?</div>
-          <div class="ko-accordion-item-body">
-            <p class="ko-accordion-item-body-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          </div>
-        </div>
-        <div class="ko-accordion-item">
-          <div class="ko-accordion-item-header">Are unsold magazines sent back to the publisher?</div>
-          <div class="ko-accordion-item-body">
-            <p class="ko-accordion-item-body-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          </div>
-        </div>
-        <div class="ko-accordion-item">
-          <div class="ko-accordion-item-header">Where can I find your disclaimer and privacy policy?</div>
-          <div class="ko-accordion-item-body">
-            <p class="ko-accordion-item-body-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-          </div>
-        </div>
-      </div>
-      <center>
-      <div class="ko-ask-qus">
-        <h3>Still have questions?</h3>
-        <p>Can't find the answer you're looking for? Please Ask the question.</p>
-        <form action="#">
-          <div class="ko-form-cotrl">
-            <input type="text" class="ko-faq-input-field" placeholder="Ask the question" />
-          </div>
-          <button class="ko-btn" type="submit">Ask Now</button>
-        </form>
-      </div>
-    </center>
-    </div>
-  </section>
+
 
 <!-- Footer #9 -->
 
@@ -514,7 +461,7 @@
                     Subscribe to our newsletter to get
                     your news, update, and special offers
                 </p>
-                <form class="input-box" action="#">
+                <form class="input-boxx" action="#">
                     <input class="email-input" placeholder="Enter your email" type="email" name="email">
                     <button class="send-btn">
                         <i class="fa-solid fa-paper-plane" style="color: #fff;"></i>
