--- a/Faq.html
+++ b/Faq.html
@@ -32,7 +32,7 @@
 
 <!-- Document Title
 ============================================= -->
-<title>Pro-Educart | Home</title>
+<title>Pro-Educart | FAQ</title>
 </head>
 
 <body class="body-scroll">
@@ -79,7 +79,7 @@
                     </li>
                     <li><a data-scroll="scrollTo" href="./contact.html" style="color: #333333;">Contact</a>
                     </li>
-                    <li><a data-scroll="scrollTo" href="#" style="color: #333333;">Register</a>
+                    <li><a data-scroll="scrollTo" href="./register.html" style="color: #333333;">Register</a>
                     </li>
                 </ul>
             </div>
