--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     </li>
                     <li><a data-scroll="scrollTo" href="./contact.html">Contact</a>
                     </li>
-                    <li><a data-scroll="scrollTo" href="#">Register</a>
+                    <li><a data-scroll="scrollTo" href="./register.html">Register</a>
                     </li>
                 </ul>
             </div>
