--- a/register.html
+++ b/register.html
@@ -16,7 +16,7 @@
     <meta name="description" content="Pro-Educart">
     <link href="assets/images/favicon/favicon.ico" rel="icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-
+    <title>Pro-Educart | Register</title>
   </head>
   <body>
     <header id="navbar-spy" class="header header-1 header-transparent header-fixed">
@@ -48,7 +48,7 @@
                         </li>
                         <li><a data-scroll="scrollTo" href="./index.html#testimonials" style="color: #333333">Testimonials</a>
                         </li>
-                        <li class="active"><a data-scroll="scrollTo" href="#" style="color:#333333">Pricing</a>
+                        <li class="active"><a data-scroll="scrollTo" href="./Price.html" style="color:#333333">Pricing</a>
                         </li>
                         <li><a data-scroll="scrollTo" href="#" style="color: #333333">Career</a>
                         </li>
