--- a/Price.html
+++ b/Price.html
@@ -26,7 +26,7 @@
         <!-- Fonts
         ============================================= -->
         <link href="https://fonts.googleapis.com/css?family=Poppins:300i,400,400i,500,600,700,800%7CLora:400,400i,700,700i" rel="stylesheet">
-        <title>Responsive Card Pricing</title>
+        <title>Pro-Educart | Price</title>
     </head>
     <body>
         <header id="navbar-spy" class="header header-1 header-transparent header-fixed">
@@ -66,7 +66,7 @@
                             </li>
                             <li><a data-scroll="scrollTo" href="./contact.html" style="color: #333333">Contact</a>
                             </li>
-                            <li><a data-scroll="scrollTo" href="#" style="color: #333333">Register</a>
+                            <li><a data-scroll="scrollTo" href="./register.html" style="color: #333333">Register</a>
                             </li>
                         </ul>
                     </div>
