--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Form</title>
+    <title>Pro-Educart | Contact</title>
     <link rel="stylesheet" href="./assets/css/contact-style.css" />
     <script
       src="https://kit.fontawesome.com/64d58efce2.js"
