--- a/Price.html
+++ b/Price.html
@@ -60,7 +60,7 @@
                             </li>
                             <li class="active"><a data-scroll="scrollTo" href="#" style="color:#f5af00">Pricing</a>
                             </li>
-                            <li><a data-scroll="scrollTo" href="#" style="color: #333333">Career</a>
+                            <li><a data-scroll="scrollTo" href="./career.html" style="color: #333333">Career</a>
                             </li>
                             <li><a data-scroll="scrollTo" href="./Faq.html" style="color: #333333">Faq</a>
                             </li>
