--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
                       </li>
                       <li class="active"><a data-scroll="scrollTo" href="#" style="color:#333333">Pricing</a>
                       </li>
-                      <li><a data-scroll="scrollTo" href="#" style="color: #333333">Career</a>
+                      <li><a data-scroll="scrollTo" href="./career.html" style="color: #333333">Career</a>
                       </li>
                       <li><a data-scroll="scrollTo" href="./Faq.html" style="color: #333333">Faq</a>
                       </li>
