--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </li>
                     <li><a data-scroll="scrollTo" href="./Price.html">Pricing</a>
                     </li>
-                    <li><a data-scroll="scrollTo" href="#">Career</a>
+                    <li><a data-scroll="scrollTo" href="./career.html">Career</a>
                     </li>
                     <li><a data-scroll="scrollTo" href="./Faq.html">Faq</a>
                     </li>
