--- a/Faq.html
+++ b/Faq.html
@@ -73,7 +73,7 @@
                     </li>
                     <li><a data-scroll="scrollTo" href="./Price.html" style="color: #333333;">Pricing</a>
                     </li>
-                    <li><a data-scroll="scrollTo" href="#" style="color: #333333;">Career</a>
+                    <li><a data-scroll="scrollTo" href="./career.html" style="color: #333333;">Career</a>
                     </li>
                     <li class="active"><a data-scroll="scrollTo" style="color: #f1c40f;" href="#">Faq</a>
                     </li>
