--- a/career.html
+++ b/career.html
@@ -52,7 +52,7 @@
                     </li>
                     <li><a data-scroll="scrollTo" href="./index.html#testimonials" style="color: #333333">Testimonials</a>
                     </li>
-                    <li class="active"><a data-scroll="scrollTo" href="#" style="color:#333333">Pricing</a>
+                    <li class="active"><a data-scroll="scrollTo" href="./Price.html" style="color:#333333">Pricing</a>
                     </li>
                     <li><a data-scroll="scrollTo" href="#" style="color: #f5af00">Career</a>
                     </li>
