--- a/career.html
+++ b/career.html
@@ -43,25 +43,25 @@
             </div>
             <div class="collapse navbar-collapse pull-right" id="navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-left nav-split nav-pos-right">
-                    <li ><a data-scroll="scrollTo" href="./index.html#hero" style="color: #333333">home</a>
+                    <li ><a data-scroll="scrollTo" href="./index.html#hero" >home</a>
                     </li>
-                    <li><a data-scroll="scrollTo" href="./index.html#services" style="color: #333333">services</a>
+                    <li><a data-scroll="scrollTo" href="./index.html#services" >services</a>
                     </li>
-                    <li><a data-scroll="scrollTo" href="./index.html#features" style="color: #333333">Features</a>
+                    <li><a data-scroll="scrollTo" href="./index.html#features" >Features</a>
                     </li>
                     <!-- <li><a data-scroll="scrollTo" href="#skills">Skills</a> -->
                     </li>
-                    <li><a data-scroll="scrollTo" href="./index.html#testimonials" style="color: #333333">Testimonials</a>
+                    <li><a data-scroll="scrollTo" href="./index.html#testimonials" >Testimonials</a>
                     </li>
                     <li class="active"><a data-scroll="scrollTo" href="./Price.html" style="color:#333333">Pricing</a>
                     </li>
                     <li><a data-scroll="scrollTo" href="#" style="color: #f5af00">Career</a>
                     </li>
-                    <li><a data-scroll="scrollTo" href="./Faq.html" style="color: #333333">Faq</a>
+                    <li><a data-scroll="scrollTo" href="./Faq.html" >Faq</a>
                     </li>
-                    <li><a data-scroll="scrollTo" href="./contact.html" style="color: #333333">Contact</a>
+                    <li><a data-scroll="scrollTo" href="./contact.html" >Contact</a>
                     </li>
-                    <li><a data-scroll="scrollTo" href="./register.html" style="color: #333333">Register</a>
+                    <li><a data-scroll="scrollTo" href="./register.html" >Register</a>
                     </li>
                 </ul>
             </div>
