--- a/register.html
+++ b/register.html
@@ -38,23 +38,23 @@
                 </div>
                 <div class="collapse navbar-collapse pull-right" id="navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-left nav-split nav-pos-right">
-                        <li ><a data-scroll="scrollTo" href="./index.html#hero" style="color: #333333">home</a>
+                        <li ><a data-scroll="scrollTo" href="./index.html#hero" >home</a>
                         </li>
-                        <li><a data-scroll="scrollTo" href="./index.html#services" style="color: #333333">services</a>
+                        <li><a data-scroll="scrollTo" href="./index.html#services" >services</a>
                         </li>
-                        <li><a data-scroll="scrollTo" href="./index.html#features" style="color: #333333">Features</a>
+                        <li><a data-scroll="scrollTo" href="./index.html#features" >Features</a>
                         </li>
                         <!-- <li><a data-scroll="scrollTo" href="#skills">Skills</a> -->
                         </li>
-                        <li><a data-scroll="scrollTo" href="./index.html#testimonials" style="color: #333333">Testimonials</a>
+                        <li><a data-scroll="scrollTo" href="./index.html#testimonials" >Testimonials</a>
                         </li>
                         <li class="active"><a data-scroll="scrollTo" href="./Price.html" style="color:#333333">Pricing</a>
                         </li>
-                        <li><a data-scroll="scrollTo" href="./career.html" style="color: #333333">Career</a>
+                        <li><a data-scroll="scrollTo" href="./career.html" >Career</a>
                         </li>
-                        <li><a data-scroll="scrollTo" href="./Faq.html" style="color: #333333">Faq</a>
+                        <li><a data-scroll="scrollTo" href="./Faq.html" >Faq</a>
                         </li>
-                        <li><a data-scroll="scrollTo" href="./contact.html" style="color: #333333">Contact</a>
+                        <li><a data-scroll="scrollTo" href="./contact.html" >Contact</a>
                         </li>
                         <li><a data-scroll="scrollTo" href="#" style="color:#f5af00">Register</a>
                         </li>
