--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     </li>
                     <li><a data-scroll="scrollTo" href="#features">Features</a>
                     </li>
-                    <!-- <li><a data-scroll="scrollTo" href="#skills">Skills</a> -->
+                    <li><a data-scroll="scrollTo" href="./demo.html">Demo</a>
                     </li>
                     <li><a data-scroll="scrollTo" href="#testimonials">Testimonials</a>
                     </li>
