--- a/register.html
+++ b/register.html
@@ -44,7 +44,7 @@
                         </li>
                         <li><a data-scroll="scrollTo" href="./index.html#features" >Features</a>
                         </li>
-                        <!-- <li><a data-scroll="scrollTo" href="#skills">Skills</a> -->
+                        <li><a data-scroll="scrollTo" href="./demo.html">Demo</a>
                         </li>
                         <li><a data-scroll="scrollTo" href="./index.html#testimonials" >Testimonials</a>
                         </li>
