--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
           <span class="icon-bar"></span>
           </button>
   
-                  <a class="logo" href="index-2.html">
+          <a class="logo" href="./index.html">
           <img class="logo-dark" src="assets/images/logo/logo.png" alt="Logo">
           <img class="logo-light" src="assets/images/logo/logo.png" alt="Logo">
           </a>
@@ -55,7 +55,7 @@
                       </li>
                       <li><a data-scroll="scrollTo" href="#" style="color: #f5af00">Contact</a>
                       </li>
-                      <li><a data-scroll="scrollTo" href="#" >Register</a>
+                      <li><a data-scroll="scrollTo" href="./register.html" >Register</a>
                       </li>
                   </ul>
               </div>
