--- a/career.html
+++ b/career.html
@@ -36,7 +36,7 @@
         <span class="icon-bar"></span>
         </button>
 
-                <a class="logo" href="index-2.html">
+                <a class="logo" href="./index.html">
         <img class="logo-dark" src="assets/images/logo/logo.png" alt="Logo">
         <img class="logo-light" src="assets/images/logo/logo.png" alt="Logo">
         </a>
@@ -53,7 +53,7 @@
                     </li>
                     <li><a data-scroll="scrollTo" href="./index.html#testimonials" >Testimonials</a>
                     </li>
-                    <li class="active"><a data-scroll="scrollTo" href="./Price.html" style="color:#333333">Pricing</a>
+                    <li class="active"><a data-scroll="scrollTo" href="./Price.html">Pricing</a>
                     </li>
                     <li><a data-scroll="scrollTo" href="#" style="color: #f5af00">Career</a>
                     </li>
@@ -208,7 +208,9 @@
 
     </footer>
 
-
+    <script src="assets/js/jquery-2.2.4.min.js"></script>
+    <script src="assets/js/plugins.js"></script>
+    <script src="assets/js/functions.js"></script>
 <script>
         //$(document).ready(function() {
 //$('.search-box').focus();
