--- a/register.html
+++ b/register.html
@@ -31,7 +31,7 @@
             <span class="icon-bar"></span>
             </button>
     
-                    <a class="logo" href="index-2.html">
+                    <a class="logo" href="./index.html">
             <img class="logo-dark" src="assets/images/logo/logo.png" alt="Logo">
             <img class="logo-light" src="assets/images/logo/logo.png" alt="Logo">
             </a>
